--- a/src/components/pokemon-card/pokemon-card.style.css
+++ b/src/components/pokemon-card/pokemon-card.style.css
@@ -1,134 +1,127 @@
-.card{
+.card {
     display: flex;
-    /* height: 100%; */
     flex-direction: column;
     justify-content: space-between;
-    background-color:#76bdfe;
+    background-color: #76bdfe;
     border-radius: 20px;
     width: 300px;
     height: 500px;
     padding: 30px 0 0 0;
     position: relative;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 
-    0 0 40px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1);
 }
 
-.card-header{
+.card-header {
     height: 50%;
     position: relative;
 }
 
-.pokemon-image{
+.pokemon-image {
     width: 150px;
     position: absolute;
     margin-top: 35%;
 }
 
-.card-container{
+.card-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
-.header-information{ 
+.header-information {
     display: flex;
     width: 80%;
     align-items: center;
     justify-content: space-between;
-    font-size: 30px;
-    text-transform:capitalize;
+    font-size: 25px;
+    text-transform: capitalize;
 }
 
-.price{ 
+.price {
     font-size: 20px;
-  }
+}
 
- .add-to-card{
-    display: flex; 
+.add-to-card {
+    display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10px;
 }
 
-.add-to-card-span{
+.add-to-card-span {
     font-size: 16px;
     font-weight: bold;
     font-style: italic;
     cursor: pointer;
-} 
+}
 
-.card-footer{
+.card-footer {
     display: flex;
     flex-direction: column;
     position: absolute;
     left: 0;
     right: 0;
-    bottom:0;
+    bottom: 0;
     padding: 30px;
     margin-top: 20px;
     background-color: white;
     border-radius: 20px;
     transition: height 0.25s ease-in;
-
 }
-.footer-options{
+
+.footer-options {
     display: flex;
     align-items: center;
     height: 20px;
     justify-content: space-between;
 }
 
-.option{
-   font-size: 14px;
-   padding-bottom: 2px;
-   height: 18px;
-   cursor: pointer;
+.option {
+    font-size: 14px;
+    padding-bottom: 2px;
+    height: 18px;
+    cursor: pointer;
 }
 
-
-.selected-option{
+.selected-option {
     font-size: 14px;
     cursor: pointer;
     border-bottom: 2px solid #838fe1;
     padding-bottom: 2px;
     height: 18px;
 }
+
 .sub-menu-option {
     margin-top: 20px;
     font-size: 12px;
-   color: #a8acb1;
-   font-weight: bold; 
+    color: #a8acb1;
+    font-weight: bold;
 }
 
-.sub-menu-option div{
+.sub-menu-option div {
     margin-bottom: 5px;
 }
-.pokeball{
-    margin-left:33%;
+
+.pokeball {
+    margin-left: 33%;
 }
 
 @media screen and (max-width: 570px) {
-    .card{
-      height:350px;
-      }  
-    .pokemon-image{
+    .card {
+        height: 350px;
+    }
+    .pokemon-image {
         margin-top: 20%;
     }
-     
-  }
+}
 
-  @media screen and (max-width: 350px) {
-    .card{
-      height:380px;
-      width: 270px;
-      }  
-    .pokemon-image{
+@media screen and (max-width: 350px) {
+    .card {
+        height: 380px;
+        width: 290px;
+    }
+    .pokemon-image {
         margin-top: 20%;
     }
-
-    body{
-        overflow-x: hidden;
-    }
-     
-  }
+}
