--- a/src/pages/dashboard/dashboard.style.css
+++ b/src/pages/dashboard/dashboard.style.css
@@ -12,7 +12,7 @@
 .pokemon-options {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: white;
   justify-content: space-between;
   cursor: pointer;
