--- a/src/pages/home-page/home-style.css
+++ b/src/pages/home-page/home-style.css
@@ -16,6 +16,8 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 70px;
+  margin-bottom: 80px;
+  min-height: 74vh;
 }
 
 .hide {
@@ -27,10 +29,4 @@
   width: 100%;
   overflow-y: scroll;
   justify-content: flex-end;
-}
-
-@media screen and (max-width: 320px) {
-  .pokemons-wrapper{
-    overflow-x: hidden;
-  }
 }
